--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+# Turn off spring Boot banner
+spring.main.banner-mode=off
+
+# Reduce the logging level. Set to only warning
+logging.level.root=warn
 
