--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,14 @@ spring.main.banner-mode=off
 # Reduce the logging level. Set to only warning
 logging.level.root=warn
 
+#Add the logging configuration to display sql statements
+
+#Log SQL statements
+logging.level.org.hibernate.SQL=debug
+
+#Log values for SQL statements
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#configure JPA/Hibernate to auto create the table
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
